# sonic-explorer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  sonic_explorer_spec.md
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
deploy_data/artifacts/: bass.index  drums.index  harmony.index  sonic_explorer.db  vocal.index
notebooks/: 01_fma_acquire_and_curate.ipynb  02_batch_embed_pipeline.ipynb  03_stem_separation_and_embed.ipynb  audio_deep_dive.ipynb
scripts/: acquire_fma.py  build_deploy_subset.py  calibration_rating_app.py  compare_song_level_retrieval.py  enrich_fma_metadata.py  filter_vocal_facet_by_ast.py  generate_song_descriptions.py  genre_cnn_model.pt  genre_cnn_results.json  merge_colab_db.py  red_team_agent.py  red_team_findings.md  repair_orphaned_embeddings.py  repath_audio_paths.py  run_evaluation.py  run_harmony_pipeline.py  run_structure_pipeline.py  sample_vocal_segment_prevalence.py  seed_dev_data.py  train_genre_cnn.py  vocal_spotcheck_app.py  vocal_spotcheck_results.csv  vocal_structure_alignment_app.py  whiten_harmony_index.py
sonic_explorer/: config.py  models.py
sonic_explorer/analysis/: embedding_whitening.py  genre_cnn.py  mel_features.py  network_graph.py  song_dna.py  taste_map.py
sonic_explorer/evaluation/: calibration_pairs.py  calibration_triplets.py  genre_cohesion.py  retrieval_diagnostics.py
sonic_explorer/facets/: base.py  fingerprint.py  harmony.py  novelty.py  registry.py  song_dna.py  sound.py  stems.py  structure.py
sonic_explorer/llm/: agent.py  agent_tools.py  explain.py  rerank.py
sonic_explorer/pipeline/: build_structure_library.py  embed_library.py  embed_stems.py  segment.py  separation.py  sound_tagging.py  vocal_presence.py
sonic_explorer/repository/: calibration_repository.py  db.py  embedding_repository.py  song_repository.py
sonic_explorer/retrieval/: service.py  (+1 more)
streamlit_app/: Overview.py  app.py  overview_page.py  resources.py
tests/: test_agent.py  test_agent_tools.py  test_animated_stats.py  test_app_walkthrough_page.py  test_build_structure_library.py  test_calibration_pairs.py  test_calibration_repository.py  test_calibration_triplets.py  test_config.py  test_context_passing.py  test_embed_library.py  test_embed_stems.py  test_embedding_whitening.py  test_explain.py  test_explore_page.py  test_facets.py  test_fingerprint.py  test_genre_cnn.py  test_genre_cohesion.py  test_harmony.py  test_landing_page.py  test_mel_features.py  test_methodology_page.py  test_moment_matcher_page.py  test_network_graph.py  test_novelty.py  test_plotting.py  test_repository.py  test_rerank.py  test_results_page.py  test_retrieval_diagnostics.py  test_retrieval_service.py  test_segment.py  test_song_dna.py  test_song_dna_analysis.py  test_song_level_index.py  test_sound_tagging.py  test_structure.py  test_taste_map.py  test_vocal_presence.py  (+1 more)
(+461 files in other folders)
